--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
 		}, 
 		"prefs": true, 
 		"reload": true, 
-		"tools": true
+		"tools": true, 
+		"topbar": true
 	}, 
 	"name": "Todo list", 
 	"platform_version": "v1.4", 
